--- a/static/css/Content.css
+++ b/static/css/Content.css
@@ -51,7 +51,7 @@ a {
     top: 6%;
     height: 70%;
     width: 100%;
-    background-image: url("/static/img/Students.jpg");
+    background-image: url("/static/img/students.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
