--- a/quiz/templates/auth/signup.html
+++ b/quiz/templates/auth/signup.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
   {%include "layouts/messages.html"%}
-  <form id="signup" method="post" >
+  <form id="signup" method="post" action="{% url 'signup' %}">
     {% csrf_token %}
     <div class="flex-container">
       <h3>{%trans "SIGNUP NEW ACCOUNT" %}</h3>
