--- a/quiz/templates/includes/navbar.html
+++ b/quiz/templates/includes/navbar.html
@@ -79,6 +79,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="dropdownUser2" style="width: 100%">
             <li><a class="dropdown-item" href="{% url 'login' %}">Login</a></li>
+            <li><a class="dropdown-item" href="{% url 'signup' %}">SignUp</a></li>
           </ul>
         </li>
         {% endif %}
