--- a/quiz/templates/topics/cn1.html
+++ b/quiz/templates/topics/cn1.html
@@ -5,7 +5,7 @@
 {% block content %}
 {% load i18n %}
 {%load static%}
-{% include "topics/aside-anchors.html" %}
+{% include "topics/aside-anchors-cn.html" %}
 <body>
     <h1>{% trans 'Computer Networks:' %}</h1> <!-- Fixed header -->
     <main>
