--- a/quiz/templates/topics/os4.html
+++ b/quiz/templates/topics/os4.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 {% block content %}
 {%load static%}
-{% include "topics/aside-anchors.html" %}
+{% include "topics/aside-anchors-os.html" %}
 <body>
     <h1>4.Storage management</h1> <!-- Fixed header -->
     <main>
