--- a/quiz/templates/topics/cn2.html
+++ b/quiz/templates/topics/cn2.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 {% block content %}
 {%load static%}
-{% include "topics/aside-anchors.html" %}
+{% include "topics/aside-anchors-cn.html" %}
 <body>
     <h1>{% trans 'Computer Networks:' %}</h1> <!-- Fixed header -->
     <main>
