--- a/quiz/templates/topics/dsa5.html
+++ b/quiz/templates/topics/dsa5.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% block content %}
 {%load static%}
-{% include "topics/aside-anchors.html" %}
+{% include "topics/aside-anchors-dsa.html" %}
 <body>
     <h1>5. Hashing</h1> <!-- Fixed header -->
     <main>
