--- a/quiz/templates/topics/os5.html
+++ b/quiz/templates/topics/os5.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 {% block content %}
 {%load static%}
-{% include "topics/aside-anchors.html" %}
+{% include "topics/aside-anchors-os.html" %}
 <style>
     h1{
         margin-left: 50px;
