--- a/quiz/templates/topics/sql5.html
+++ b/quiz/templates/topics/sql5.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 {% block content %}
 {%load static%}
-{% include "topics/aside-anchors.html" %}
+{% include "topics/aside-anchors-sql.html" %}
 <body>
     <h1>5.SQl Transactions</h1> <!-- Fixed header -->
     <main>
