--- a/quiz/templates/topics/toc2.html
+++ b/quiz/templates/topics/toc2.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 {% block content %}
 {%load static%}
-{% include "topics/aside-anchors.html" %}
+{% include "topics/aside-anchors-toc.html" %}
 <body>
     <h1>2. Finite Automata</h1> <!-- Fixed header -->
     <main>
