--- a/quiz/templates/topics/toc3.html
+++ b/quiz/templates/topics/toc3.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% block content %}
 {%load static%}
-{% include "topics/aside-anchors.html" %}
+{% include "topics/aside-anchors-toc.html" %}
 <body>
     <h1>3. Context-Free Grammars</h1> <!-- Fixed header -->
     <main>
