--- a/quiz/templates/topics/toc4.html
+++ b/quiz/templates/topics/toc4.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% block content %}
 {%load static%}
-{% include "topics/aside-anchors.html" %}
+{% include "topics/aside-anchors-toc.html" %}
 <body>
     <h1>4. Turing Machines</h1> <!-- Fixed header -->
     <main>
