--- a/quiz/templates/topics/aside-anchors-sql.html
+++ b/quiz/templates/topics/aside-anchors-sql.html
@@ -1,9 +1,9 @@
     <aside>
         <p class="aside-anchors">contents:</p>
         <hr>
-        <a href="{% url 'sql'%}" class="aside-anchors">1.Introduction to Databases</a>
-        <a href="{% url 'sql1'%}" class="aside-anchors">2.SQL Syntax and Datatypes</a>
-        <a href="{% url 'sql2'%}" class="aside-anchors">3.SQL Operators</a>
-        <a href="{% url 'sql3'%}" class="aside-anchors">4.SQL Joins and Clauses</a>
-        <a href="{% url 'sql4'%}" class="aside-anchors">5.SQL Transactions</a>
+        <a href="{% url 'sql1'%}" class="aside-anchors">1.Introduction to Databases</a>
+        <a href="{% url 'sql2'%}" class="aside-anchors">2.SQL Syntax and Datatypes</a>
+        <a href="{% url 'sql3'%}" class="aside-anchors">3.SQL Operators</a>
+        <a href="{% url 'sql4'%}" class="aside-anchors">4.SQL Joins and Clauses</a>
+        <a href="{% url 'sql5'%}" class="aside-anchors">5.SQL Transactions</a>
     </aside>
