--- a/quiz/templates/topics/cn4.html
+++ b/quiz/templates/topics/cn4.html
@@ -16,7 +16,7 @@
             <h3>1. Physical Layer</h3>
             <p>
                 The physical layer is the lowest layer of the OSI model and deals with the physical transmission of data over a communication medium. It defines the electrical, mechanical, and procedural aspects of transmitting raw data between devices. Examples of physical layer technologies include Ethernet, Wi-Fi, and fiber optics.
-            </p><image src="https://static.javatpoint.com/tutorial/computer-network/images/osi-model.png" class="cn"><b>osi and tcp/ip models</b></image>
+            </p><image src="https://images.tpointtech.com/tutorial/computer-network/images/network-layer-in-osi-model2.png" class="cn"><b>osi and tcp/ip models</b></image>
             <h3>2. Data Link Layer</h3>
             <p>
                 The data link layer is responsible for establishing and maintaining a reliable link between adjacent nodes on a network. It handles issues such as framing, error detection, and flow control. Ethernet and PPP (Point-to-Point Protocol) are examples of data link layer protocols.
